# elsa

./: .gitignore  LICENSE  Makefile  Readme  Readme.md  meson.build  test.conf
cli/: elsa.c  iniparser.c  main.vala  test.c
data/: application.desktop  pkgconfig
example/: elsa.conf  langlist.c  main  sample.ini
include/: elsa.h  environ.h  iniparser.h  language.h  layout.h  module.h
modules/: copy  fstab  grub  hello.c  main  mount  partition  unmount  useradd
python/: elsa.py
src/: command.vala  config.vala  debug.vala  elsa.c  elsa.vala  environ.c  iniparser.c  language.c  layout.c  main.vala  module.c  module.vala  modules.vala  util.vala
src/cli/: main.vala
src/modules/: mount.vala  parted.vala  rsync.vala
src/test/: gtk.vala  test.py
tool/: mkctx.sh
